Fixed map callouts panel clipping when scoreboard is open

--- a/Code/UI/HUD/Components/Balance.razor.scss
+++ b/Code/UI/HUD/Components/Balance.razor.scss
@@ -1,8 +1,6 @@
 @import "/UI/Styles/Theme.scss";
 
 Balance {
-    margin-top: 25px;
-
     InputHint {
         transform: scale( 1 );
         max-width: 120px;
