--- a/Code/UI/HUD/Components/MapCallouts.razor.scss
+++ b/Code/UI/HUD/Components/MapCallouts.razor.scss
@@ -1,8 +1,6 @@
 @import "/UI/Styles/Theme.scss";
 
 MapCallouts {
-    position: absolute;
-
     .label {
         align-self: center;
     }
